force-app/main/default/objects/Depot__c/Depot__c.object-meta.xml
<CustomObject>
    <label>Depot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>