force-app/main/default/objects/Depot__c/fields/AccessTime__c.field-meta.xml
<CustomField>
    <fullName>AccessTime__c</fullName>
    <label>Access Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>