force-app/main/default/objects/Depot__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>Contact Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>