force-app/main/default/objects/Depot__c/fields/DepotNumber__c.field-meta.xml
<CustomField>
    <fullName>DepotNumber__c</fullName>
    <label>Depot Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>