force-app/main/default/objects/Depot__c/fields/HasContainers__c.field-meta.xml
<CustomField>
    <fullName>HasContainers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Containers?</label>
    <type>Checkbox</type>
</CustomField>