force-app/main/default/objects/Depot__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Index</label>
    <type>AutoNumber</type>
</CustomField>