force-app/main/default/objects/Depot__c/fields/IsIntermediate__c.field-meta.xml
<CustomField>
    <fullName>IsIntermediate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intermediate?</label>
    <type>Checkbox</type>
</CustomField>