force-app/main/default/objects/Depot__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <label>Penalty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>