force-app/main/default/objects/Depot__c/fields/StartEnd__c.field-meta.xml
<CustomField>
    <fullName>StartEnd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start End?</label>
    <type>Checkbox</type>
</CustomField>