force-app/main/default/objects/Depot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Index__c</columns>
    <columns>NAME</columns>
    <columns>ContactName__c</columns>
    <columns>Address__Street__s</columns>
    <columns>Address__City__s</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Coordinates__Latitude__s</columns>
    <columns>Coordinates__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>